part1/to-do/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-svc
spec:
  type: ClusterIP
  selector:
    app: todo
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 80
